# projecteuler-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  solve.py  tests_requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml  python-package2.yml
project_euler/: __init__.py
project_euler/arithmetic/: arithmetic.py
project_euler/general/: __init__.py
project_euler/geometry/: geometry.py  pythagorean.py
project_euler/graph/: dgraph.py
project_euler/number_theory/: factor.py  palindrome.py  primes.py  rotations.py  series.py
project_euler/problems/: __init__.py  problem01.py  problem02.py  problem03.py  problem04.py  problem05.py  problem06.py  problem07.py  problem08.py  problem09.py  problem10.py  problem100.py  problem11.py  problem12.py  problem13.py  problem14.py  problem15.py  problem16.py  problem17.py  problem18.py  problem19.py  problem20.py  problem21.py  problem22.py  problem23.py  problem24.py  problem25.py  problem26.py  problem27.py  problem28.py  problem29.py  problem30.py  problem31.py  problem32.py  problem33.py  problem34.py  problem35.py  problem36.py  problem37.py  problem38.py  (+61 more)
project_euler/utils/: poker.py  timeit.py
tests/: test_regression.py
