[metadata]
name = project_euler
version = 0.0.1

[options]
packages = find:
zip_safe = false
install_requires =
    backports.entry-points-selectable==1.1.0
    cfgv==3.3.1
    distlib==0.3.3
    filelock==3.3.0
    identify==2.3.0
    nodeenv==1.6.0
    numpy==1.21.2
    pandas==1.3.3
    platformdirs==2.4.0
    pre-commit==2.15.0
    python-dateutil==2.8.2
    pytz==2021.3
    PyYAML==5.4.1
    six==1.16.0
    toml==0.10.2
    virtualenv==20.8.1
